@@ -1201,6 +1201,21 @@ static void defaultMachine(/*@out@*/ const char ** arch,
 	}
 #	endif
 
+#	if defined(__linux__) && defined(__powerpc__)
+	{
+	    uint32 pvr;
+	    __asm__ __volatile__ ("mfspr %0, 287" : "=r" (pvr));
+
+	    pvr >>= 16;
+	    if ( pvr >= 0x40)
+		strcpy(un.machine, "ppcpseries");
+	    else if ( (pvr == 0x36) || (pvr == 0x37) )
+		strcpy(un.machine, "ppciseries");
+	    else
+		strcpy(un.machine, "pmac");
+	}
+#	endif
+
 	/* the uname() result goes through the arch_canon table */
 	canon = lookupInCanonTable(un.machine,
 				   tables[RPM_MACHTABLE_INSTARCH].canons,
