@@ -31,18 +31,27 @@ optflags: alphaev67 -O2 -mieee -mcpu=ev67
 optflags: sparc -O2 -m32 -mtune=ultrasparc
 optflags: sparcv9 -O2 -m32 -mcpu=ultrasparc
 optflags: sparc64 -O2 -m64 -mcpu=ultrasparc
+
 optflags: m68k -O2 -fomit-frame-pointer
+
 optflags: ppc -O2 -fsigned-char
+optflags: ppciseries -O2 -fsigned-char
+optflags: ppcpseries -O2 -fsigned-char
+optflags: pmac -O2 -fsigned-char
+
 optflags: parisc -O2 -mpa-risc-1-0
 optflags: hppa1.0 -O2 -mpa-risc-1-0
 optflags: hppa1.1 -O2 -mpa-risc-1-0
 optflags: hppa1.2 -O2 -mpa-risc-1-0
 optflags: hppa2.0 -O2 -mpa-risc-1-0
+
 optflags: mipseb -O2
 optflags: mipsel -O2
+
 optflags: armv3l -O2 -fsigned-char -fomit-frame-pointer -march=armv3
 optflags: armv4b -O2 -fsigned-char -fomit-frame-pointer -march=armv4
 optflags: armv4l -O2 -fsigned-char -fomit-frame-pointer -march=armv4
+
 optflags: atarist -O2 -fomit-frame-pointer
 optflags: atariste -O2 -fomit-frame-pointer
 optflags: ataritt -O2 -fomit-frame-pointer
@@ -50,6 +59,7 @@ optflags: falcon -O2 -fomit-frame-pointer
 optflags: atariclone -O2 -fomit-frame-pointer
 optflags: milan -O2 -fomit-frame-pointer
 optflags: hades -O2 -fomit-frame-pointer
+
 optflags: s390 -O2
 optflags: s390x -O2 
 
@@ -61,12 +71,14 @@ arch_canon:	i686:	i686	1
 arch_canon:	i586:	i586	1
 arch_canon:	i486:	i486	1
 arch_canon:	i386:	i386	1
+
 arch_canon:	alpha:	alpha	2
 arch_canon:	alphaev5: alphaev5	2
 arch_canon:	alphaev56: alphaev56	2
 arch_canon:	alphapca56:alphapca56	2
 arch_canon:	alphaev6: alphaev6	2
 arch_canon:	alphaev67: alphaev67	2
+
 arch_canon: 	sparc:	sparc	3
 arch_canon: 	sun4:	sparc	3
 arch_canon: 	sun4m:	sparc	3
@@ -75,7 +87,12 @@ arch_canon:	sun4d:  sparc   3
 arch_canon:   sparcv9: sparcv9	3
 # This is really a place holder for MIPS.
 arch_canon:	mipseb:	mipseb	4
+
 arch_canon:	ppc:	ppc	5
+arch_canon:	ppciseries:	ppciseries	5
+arch_canon:	ppcpseries:	ppcpseries	5
+arch_canon:	pmac:	pmac	5
+
 arch_canon:	m68k:	m68k	6
 arch_canon:	IP:	sgi	7
 arch_canon:     rs6000:	rs6000  8
@@ -147,10 +164,6 @@ buildarchtranslate: i586: i386
 buildarchtranslate: i486: i386
 buildarchtranslate: i386: i386
 
-buildarchtranslate: osfmach3_ppc: ppc
-buildarchtranslate: powerpc: ppc
-buildarchtranslate: powerppc: ppc
-
 buildarchtranslate: alphaev5: alpha
 buildarchtranslate: alphaev56: alpha
 buildarchtranslate: alphapca56: alpha
@@ -162,6 +175,13 @@ buildarchtranslate: sun4d: sparc
 buildarchtranslate: sun4m: sparc
 buildarchtranslate: sparcv9: sparc
 buildarchtranslate: sun4u: sparc64
+
+buildarchtranslate: osfmach3_ppc: ppc
+buildarchtranslate: powerpc: ppc
+buildarchtranslate: powerppc: ppc
+buildarchtranslate: ppciseries: ppc
+buildarchtranslate: ppcpseries: ppc
+buildarchtranslate: pmac: ppc
 
 buildarchtranslate: atarist: m68kmint
 buildarchtranslate: atariste: m68kmint
@@ -198,6 +218,11 @@ arch_compat: osfmach3_i386: i486
 arch_compat: osfmach3_ppc: ppc
 arch_compat: powerpc: ppc
 arch_compat: powerppc: ppc
+arch_compat: ppciseries: ppc
+arch_compat: ppcpseries: ppc
+arch_compat: pmac: ppc
+arch_compat: ppc: rs6000
+arch_compat: rs6000: noarch
 
 arch_compat: sun4c: sparc
 arch_compat: sun4d: sparc
@@ -207,8 +232,6 @@ arch_compat: sparc64: sparcv9
 arch_compat: sparcv9: sparc
 arch_compat: sparc: noarch
 
-arch_compat: ppc: rs6000
-arch_compat: rs6000: noarch
 arch_compat: mipseb: noarch
 arch_compat: mipsel: noarch
 
@@ -287,7 +310,12 @@ buildarch_compat: alphaev5: alpha
 buildarch_compat: alpha: noarch
 
 buildarch_compat: m68k: noarch
+
+buildarch_compat: ppciseries: noarch
+buildarch_compat: ppcpseries: noarch
+buildarch_compat: pmac: noarch
 buildarch_compat: ppc: noarch
+
 buildarch_compat: mipsel: noarch
 buildarch_compat: mipseb: noarch
 
